# telegram-bot-rs

./: Cargo.toml
.github/workflows/: test.yml
src/: lib.rs
src/controllers/: authentication.rs  message.rs
src/models/: get_me.rs  get_update.rs  mod.rs  telegram_response.rs
src/models/types/: animation.rs  audio.rs  bot.rs  callback_query.rs  chat.rs  chat_location.rs  chat_permissions.rs  chat_photo.rs  contact.rs  dice.rs  document.rs  file.rs  force_replay.rs  force_reply.rs  forum_topic.rs  game.rs  general_forum_topic.rs  inline_keyboard.rs  input_media.rs  keyboard.rs  keyboard_button.rs  location.rs  login_url.rs  menu_button.rs  message.rs  message_entity.rs  mod.rs  passport.rs  payments.rs  photo_size.rs  poll.rs  proximity_alert_triggered.rs  replay_keyboard.rs  sticker.rs  story.rs  switch_inline_query_chosen_chat.rs  user.rs  venue.rs  video.rs  voice.rs  (+2 more)
src/tests/: mod.rs
